--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,35 +13,50 @@
     <!-- Banner Section -->
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textViewBarcelona"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/barcelona"
+        android:textStyle="bold"
+        style="@style/OuterLinkStyle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <TextView
+        android:id="@+id/textViewParis"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="92dp"
         android:layout_marginTop="20dp"
         android:text="@string/paris"
         android:textStyle="bold"
+        style="@style/OuterLinkStyle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textViewQatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="92dp"
         android:text="@string/qatar"
         android:textStyle="bold"
+        style="@style/OuterLinkStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textViewMiami"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="88dp"
         android:text="@string/miami"
         android:textStyle="bold"
+        style="@style/OuterLinkStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -53,6 +68,7 @@
         android:layout_marginEnd="44dp"
         android:src="@drawable/qatar"
         android:contentDescription="@string/qatar"
+        style="@style/OuterLinkStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -155,59 +171,50 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/banner_title" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="24dp"
-        android:text="@string/barcelona"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-    <TextView
-        android:id="@+id/barcelonaPhoneText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/barcelona_phone"
-        style="@style/PhoneNumberStyle"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView" />
 
-    <TextView
-        android:id="@+id/miamiPhoneText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/miami_phone"
-        style="@style/PhoneNumberStyle"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2" />
+<!--    <TextView-->
+<!--        android:id="@+id/barcelonaPhoneText"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:text="@string/barcelona_phone"-->
+<!--        style="@style/PhoneNumberStyle"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textView2"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/imageView"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/imageView" />-->
 
-    <TextView
-        android:id="@+id/parisPhoneText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/paris_phone"
-        style="@style/PhoneNumberStyle"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintStart_toStartOf="@+id/imageView3"
-        app:layout_constraintEnd_toEndOf="@+id/imageView3" />
+<!--    <TextView-->
+<!--        android:id="@+id/miamiPhoneText"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:text="@string/miami_phone"-->
+<!--        style="@style/PhoneNumberStyle"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textView3"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/imageView2"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/imageView2" />-->
 
-    <TextView
-        android:id="@+id/qatarPhoneText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/qatar_phone"
-        style="@style/PhoneNumberStyle"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:layout_constraintStart_toStartOf="@+id/imageView4"
-        app:layout_constraintEnd_toEndOf="@+id/imageView4" />
+<!--    <TextView-->
+<!--        android:id="@+id/parisPhoneText"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:text="@string/paris_phone"-->
+<!--        style="@style/PhoneNumberStyle"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textView4"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/imageView3"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/imageView3" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/qatarPhoneText"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:text="@string/qatar_phone"-->
+<!--        style="@style/PhoneNumberStyle"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textView5"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/imageView4"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/imageView4" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
