--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,7 +53,7 @@
         <item name="android:layout_margin">10dp</item>
     </style>
 
-    <style name="PhoneNumberStyle">
+    <style name="OuterLinkStyle">
         <item name="android:textColor">#0066CC</item>
         <item name="android:background">@android:color/transparent</item>
         <item name="android:clickable">true</item>
